--- a/frontend-leis/src/app/protected/modules/users/pages/create-rol/create-rol.component.html
+++ b/frontend-leis/src/app/protected/modules/users/pages/create-rol/create-rol.component.html
@@ -7,16 +7,16 @@
       style="border-radius: 10px; width: 40%"
       type="text"
       class="form-control"
-      placeholder="ejemplo@usantoto.edu.co"
+      placeholder="Administrador, Estudiante, Lab"
     />
 
     <br />
-    <label>Permisos:</label>
+    <label>Roles:</label>
     <input
       style="border-radius: 10px; width: 40%"
       type="text"
       class="form-control"
-      placeholder="ejemplo@usantoto.edu.co"
+      placeholder="roles"
     />
   </div>
   <br />
