--- a/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.css
+++ b/frontend-leis/src/app/protected/modules/equipment/pages/manage-users/manage-users.component.css
@@ -86,7 +86,6 @@ mat-grid-tile {
   margin: 0;
   min-width: 40%;
   height: 80px;
-  background: lightblue;
   overflow-y: auto;
   text-align: center;
   border: 2px solid orange;
@@ -108,7 +107,7 @@ mat-grid-tile {
   padding: 20px;
 }
 .photo img {
-  border: 2px solid orange;
+  border: 2px solid rgb(8, 22, 54);
   border-radius: 1rem;
   width: 100%;
   height: 100%;
@@ -146,8 +145,7 @@ mat-grid-tile {
   display: flex;
   justify-content: center;
   font-size: 20px;
-  background: var(--primary);
-  color: white;
+  color: rgb(8, 22, 54);
   width: 22%;
   height: 110%;
   border-radius: 15px;
@@ -210,4 +208,13 @@ mat-grid-tile {
   padding: 5px;
   border-radius: 40px;
 
+}
+
+.p-button{
+  margin-top: 15px;
+  margin-bottom: 10px;
+  align-items: center;
+  background-color: #081636;
+  border-bottom: #081636;
+  margin-left: 20px;
 }
